--- a/public/app/caixas/views/edit/_ibox-conferencia-cartoes.html
+++ b/public/app/caixas/views/edit/_ibox-conferencia-cartoes.html
@@ -12,7 +12,7 @@
                             <thead>
                             <tr>
                                 <th></th>
-                                <th class="text-center">Bandeira</th>
+                                <th class="text-center">Bandeiras</th>
                                 <th>Valor</th>
                                 <th class="text-center">Turno</th>
                             </tr>
