--- a/public/app/caixas/views/create/create-caixa.client.view.html
+++ b/public/app/caixas/views/create/create-caixa.client.view.html
@@ -26,7 +26,7 @@
                             <br/><br/>
                             <div class="form-group">
                                 <div class="input-group">
-                                    <label for="inputDataCaixa" class="input-group-addon"><i class="fa fa-calendar"></i></label>
+                                    <label for="inputDataCaixa" class="input-group-addon" tooltip-placement="left" tooltip="On the Left!"><i class="fa fa-calendar"></i></label>
                                     <input type="date" id="inputDataCaixa" class="form-control" data-ng-model="data_caixa" ng-change="onChange()">
                                 </div>
                             </div>
@@ -413,25 +413,3 @@
         </form>
     </div>
 </section>
-
-<!--<div class="col-lg-3">-->
-
-
-    <!--<br/><br/>-->
-
-    <!--<table class="table no-margins">-->
-        <!--<thead>-->
-        <!--<tr>-->
-            <!--<th colspan="3" class="text-danger">Despesas Tarde</th>-->
-        <!--</tr>-->
-        <!--</thead>-->
-        <!--<tbody>-->
-        <!--<tr data-ng-repeat="desp_m in saidas.despesas | filter: {turno: enums.turnos.tarde}">-->
-            <!--<td>{{ desp_m.descricao }}</td>-->
-            <!--<td>{{ desp_m.valor | currency: 'R$ ' }}</td>-->
-            <!--<td><i class="fa fa-remove clickable" ng-click="removeRegistro(desp_m, 'despesa', 'tarde')"></i></td>-->
-        <!--</tr>-->
-        <!--</tbody>-->
-    <!--</table> &lt;!&ndash; Tabela Saídas - Tarde &ndash;&gt;-->
-
-<!--</div> &lt;!&ndash; Tabelas Lançamentos Despesas &ndash;&gt;-->
