--- a/public/app/caixas/views/edit/edit-caixa.client.view.html
+++ b/public/app/caixas/views/edit/edit-caixa.client.view.html
@@ -20,6 +20,19 @@
         <form data-ng-submit="update()">
             <div class="row">
                 <div class="col-lg-4">
+                    <div class="ibox float-e-margins">
+                        <div class="ibox-title">
+                            <h5>Modal form
+                                <small>Example of login in modal box</small>
+                            </h5>
+                            <div ibox-tools></div>
+                        </div>
+                        <div class="ibox-content">
+                            <div class="text-center">
+                                <a class="btn btn-primary" ng-click="teste()">Form in simple modal box</a>
+                            </div>
+                        </div>
+                    </div>
                     <ibox-conferencia-entradas></ibox-conferencia-entradas>
                 </div>
                 <div class="col-lg-4">
@@ -28,6 +41,7 @@
                 <div class="col-lg-4">
                     <ibox-conferencia-cartoes></ibox-conferencia-cartoes>
                 </div>
+
             </div>
             <div class="row">
                 <div class="col-lg-12">
@@ -38,6 +52,7 @@
             </div>
         </form>
     </div>
+
 </section>
 
 <!--<div class="row">-->
