--- a/public/app/caixas/views/modals/teste.html
+++ b/public/app/caixas/views/modals/teste.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-white">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-white" ng-click="cancel()">Close</button>
+        <button type="button" class="btn btn-primary" ng-click="ok()">Save changes</button>
     </div>
 </div>
