Consulta Dashboard implementada (ainda precisa ser ajustada) - agora vou colocar o flotChart

--- a/public/app/caixas/views/dashboard-caixas.client.view.html
+++ b/public/app/caixas/views/dashboard-caixas.client.view.html
@@ -1,13 +1,13 @@
-<div class="wrapper wrapper-content" data-ng-controller="CaixasController" data-ng-init="find()">
+<div class="wrapper wrapper-content" data-ng-controller="DashboardsController" data-ng-init="findNew()">
     <div class="row">
         <div class="col-lg-3">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <span class="label label-success pull-right">Monthly</span>
-                    <h5>Income</h5>
+                    <h5>Venda</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">40 886,200</h1>
+                    <h1 class="no-margins">{{ dashboard.base.total | currency: 'R$ ' }}</h1>
 
                     <div class="stat-percent font-bold text-success">98% <i class="fa fa-bolt"></i></div>
                     <small>Total income</small>
@@ -18,13 +18,13 @@
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <span class="label label-info pull-right">Annual</span>
-                    <h5>Orders</h5>
+                    <h5>Cartões</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">275,800</h1>
+                    <h1 class="no-margins">{{ dashboard.cartoes.total | currency: 'R$ ' }}</h1>
 
                     <div class="stat-percent font-bold text-info">20% <i class="fa fa-level-up"></i></div>
-                    <small>New orders</small>
+                    <small>Débito</small>
                 </div>
             </div>
         </div>
