--- a/public/app/caixas/views/create-caixa.client.view.html
+++ b/public/app/caixas/views/create-caixa.client.view.html
@@ -91,6 +91,67 @@
 
                             <tab>
                                 <tab-heading>
+                                    <i class="fa fa-money"></i>Despesas
+                                </tab-heading>
+                                <div class="panel-body">
+
+                                    <div class="form-inline">
+
+                                        <div class="form-group form-group-sm">
+                                            <input type="text" placeholder="Descrição" class="form-control" data-ng-model="obj.despesa.descricao">
+                                        </div> <!-- Input Descrição do Registro -->
+
+                                        <div class="form-group form-group-sm">
+                                            <input type="number" step="any" placeholder="Valor" class="form-control" data-ng-model="obj.despesa.valor">
+                                        </div> <!-- Input Valor do Registro -->
+
+                                        <div class="form-group form-group-sm"> <!-- enum do caixa.client.controller -->
+                                            <select class="form-control"
+                                                    data-ng-model="obj.despesa.fornecedor"
+                                                    data-ng-options="item as item for item in lista.fornecedores">
+                                            </select>
+                                        </div> <!-- Select Fornecedor -->
+
+                                        <div class="form-group form-group-sm"> <!-- enum do caixa.client.controller -->
+                                            <select class="form-control"
+                                                    data-ng-model="obj.despesa.turno"
+                                                    data-ng-options="item.valor as item.display for item in lista.turnos">
+                                            </select>
+                                        </div> <!-- Select Turno -->
+
+                                        <div class="form-group form-group-sm">
+                                            <a style="border-color: white;" class="btn btn-sm btn-info" ng-click="addReg(obj.despesa); sounds.play('add')"><i class="fa fa-plus"></i></a>
+                                        </div>
+
+                                    </div> <!-- Form Input Despesas e Movimentação -->
+                                    <br/>
+
+                                    <div class="row">
+                                        <div class="col-lg-6">
+
+                                            <table class="table no-margins">
+                                                <thead>
+                                                <tr>
+                                                    <th colspan="3" class="text-danger">Despesas</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr data-ng-repeat="desp in saidas.despesas | orderBy: 'turno'">
+                                                    <td>{{ desp.descricao }}</td>
+                                                    <td><i ng-class="defC.turnoIcon(desp.turno)"></i></td>
+                                                    <td>{{ desp.valor | currency: 'R$ ' }}</td>
+                                                    <td><i class="fa fa-remove clickable" ng-click="removeReg(desp); sounds.play('remove');"></i></td>
+                                                </tr>
+                                                </tbody>
+                                            </table> <!-- Tabela Despesas -->
+
+                                        </div> <!-- Tabela Despesas -->
+                                    </div> <!-- Row Tabela Despesas -->
+                                </div>
+                            </tab> <!-- Tab Form Despesas -->
+
+                            <tab>
+                                <tab-heading>
                                     <i class="fa fa-lightbulb-o"></i> Consumo
                                 </tab-heading>
                                 <div class="panel-body">
@@ -148,60 +209,6 @@
                                 </div>
 
                             </tab> <!-- Tab Form Consumo (Luz Água) -->
-
-                            <tab>
-                                <tab-heading>
-                                    <i class="fa fa-money"></i>Despesas
-                                </tab-heading>
-                                <div class="panel-body">
-
-                                    <div class="form-inline">
-
-                                        <div class="form-group form-group-sm">
-                                            <input type="text" placeholder="Descrição" class="form-control" data-ng-model="obj.despesa.descricao">
-                                        </div> <!-- Input Descrição do Registro -->
-
-                                        <div class="form-group form-group-sm">
-                                            <input type="number" step="any" placeholder="Valor" class="form-control" data-ng-model="obj.despesa.valor">
-                                        </div> <!-- Input Valor do Registro -->
-
-                                        <div class="form-group form-group-sm"> <!-- enum do caixa.client.controller -->
-                                            <select class="form-control"
-                                                    data-ng-model="obj.despesa.turno"
-                                                    data-ng-options="item.valor as item.display for item in lista.turnos">
-                                            </select>
-                                        </div> <!-- Select Turnos -->
-
-                                        <div class="form-group form-group-sm">
-                                            <a style="border-color: white;" class="btn btn-sm btn-info" ng-click="addReg(obj.despesa); sounds.play('add')"><i class="fa fa-plus"></i></a>
-                                        </div>
-
-                                    </div> <!-- Form Input Despesas e Movimentação -->
-                                    <br/>
-
-                                    <div class="row">
-                                        <div class="col-lg-6">
-
-                                            <table class="table no-margins">
-                                                <thead>
-                                                <tr>
-                                                    <th colspan="3" class="text-danger">Despesas</th>
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-                                                <tr data-ng-repeat="desp in saidas.despesas | orderBy: 'turno'">
-                                                    <td>{{ desp.descricao }}</td>
-                                                    <td><i ng-class="defC.turnoIcon(desp.turno)"></i></td>
-                                                    <td>{{ desp.valor | currency: 'R$ ' }}</td>
-                                                    <td><i class="fa fa-remove clickable" ng-click="removeReg(desp); sounds.play('remove');"></i></td>
-                                                </tr>
-                                                </tbody>
-                                            </table> <!-- Tabela Despesas -->
-
-                                        </div> <!-- Tabela Despesas -->
-                                    </div> <!-- Row Tabela Despesas -->
-                                </div>
-                            </tab> <!-- Tab Form Despesas -->
 
                             <tab>
                                 <tab-heading>
